--- a/package.json
+++ b/package.json
@@ -46,13 +46,16 @@
     "date-fns": "^3.6.0",
     "emailjs-com": "^3.2.0",
     "embla-carousel-react": "^8.3.0",
+    "firebase": "^11.9.0",
     "framer-motion": "^12.16.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-datepicker": "^8.4.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.30.1",
